@@ -69,7 +69,7 @@
 	</colorbuttons>
 	
 	<scrollbar>
-		<area condition="lt({height},1000)" x="95%" y="15%" width="5%" height="73%" layer="3">
+		<area condition="lt({height},1000)" x="95%" y="26%" width="5%" height="56%" layer="3">
 			 <drawimage   x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowScrollSub" />
 			 <drawimage x="15%" y="{areaheight} * {offset} / 1000" width="{areawidth}*0.1" height="{areaheight} * {height} / 1000" imagetype="skinpart" path="scrollBar" />
 		</area>
@@ -93,25 +93,24 @@
 	{screenshots[path]}                 screenshot path
 	-->
 	<detailheader>
-		<area x="3%" y="13%" width="50%" height="6%" layer="3">
-			<drawtext valign="center" font="{light}" fontsize="80%" color="{clrLightGray}" text="Skin: {skinname} - Author: {author} " />
+		<area x="3%" y="13%" width="50%" height="12%" layer="3">
+			<drawtext y="5%" font="{light}" fontsize="45%" color="{clrLightGray}" text="Skin: {skinname}" />
+			<drawtext y="55%" font="{light}" fontsize="45%" color="{clrLightGray}" text="Author: {author} " />
 		</area>
 	</detailheader>
 
-	<tab name="preview" x="3%" y="20%" width="94%" height="69%" layer="2" scrollheight="{areaheight}/4">
+	<tab name="preview" x="3%" y="19%" width="94%" height="72%" layer="3" scrollheight="{areaheight}">
 		<drawtext name="headerplugs" x="0" y="20%" font="{light}" fontsize="6%" color="{clrLightGray}" text="Supported Plugins:" />
 		<loop name="plugins" x="1%" y="{posy(headerplugs)} + {height(headerplugs)}*1.3" orientation="vertical" columnwidth="{areawidth}/2" rowheight="{areaheight}*0.06">
 			<drawtext x="0" valign="center" font="{light}" fontsize="5%" color="{clrLightGray}" text="{plugins[name]}" />
 		</loop>
-
 		<drawtext name="headerfonts" x="0" y="55%" font="{light}" fontsize="6%" color="{clrLightGray}" text="Used Fonts:" />
 		<loop name="fonts" x="1%" y="{posy(headerfonts)} + {height(headerfonts)}*1.3" orientation="vertical" columnwidth="{areawidth}/2" rowheight="{areaheight}*0.06">
 			<drawtext condition="{fonts[installed]}" x="0" valign="center" font="{light}" fontsize="5%" color="{clrLightGray}" text="{fonts[name]} (installed)" />
 			<drawtext condition="not{fonts[installed]}" x="0" valign="center" font="{light}" fontsize="5%" color="{clrLightGray}" text="{fonts[name]} (NOT installed)" />
 		</loop>
-
-		<loop name="screenshots" x="30%" y="0" orientation="vertical" columnwidth="{areawidth}*0.6" rowheight="{areawidth}*0.43">
-			<drawtext name="desc" align="center" y="0" font="{light}" fontsize="7%" color="{clrWhite}" text="{screenshots[desc]}" />
+		<loop name="screenshots" x="37%" y="0" orientation="vertical" columnwidth="{areawidth}*0.6" rowheight="{areawidth}*0.43">
+			<drawtext name="desc" align="center" y="0" font="{light}" fontsize="7%" color="{clrLightGray}" text="{screenshots[desc]}" />
 			<drawimage imagetype="image" path="{screenshots[path]}" align="center" y="{height(desc)}*1.3" width="{areawidth}*0.6" height="{areawidth}*0.3375"/>
 		</loop>
 	</tab>
