@@ -182,3 +182,6 @@ shady-skin Revision History
 - Adapted displayreplay for time/perma-shift
 - Added replayTimeshift.svg
 
+2015-05-31:
+
+- Some graphical improvements for skinpreview
